--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_HOST: db
-      DB_PORT: ${DB_PORT}
+      DB_PORT: 3306
       DB_NAME: ${DB_NAME}
     volumes:
       - ./api:/app
