--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# 실행할 개별 컨테이너 정의
 services:
   # MySQL 데이터베이스 컨테이너
   db:
@@ -8,35 +7,35 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_NAME}
-    ports:
-      - 3309:3306
     volumes:
       - mysql_data:/var/lib/mysql
+    ports:
+      - "3306:3306"
 
   # FastAPI 백엔드 서버 컨테이너
   api:
-    build: ./api
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    restart: always
     environment:
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
-      DB_HOST: db
-      DB_PORT: 3306
-      DB_NAME: ${DB_NAME}
-    volumes:
-      - ./api:/app
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - DEBUG=False
     ports:
-      - "9000:8000"
+      - "80:8000"
     depends_on:
       - db
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
-  # adminer 데이터베이스 관리 도구 컨테이너
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - "8080:8080"
-
-# MySQL 데이터를 로컬에 영구 저장
+# MySQL 데이터를 영구 저장
 volumes:
   mysql_data:
