--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
       - DEBUG=False
     ports:
-      - "9000:8000"
+      - "0.0.0.0:9000:8000"  # 모든 IP에서 접근 허용
     depends_on:
       - db
     networks:
