--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         
     - name: Deploy with Docker Compose
       run: |
-        cd ~/dermacare-engine
+        cd ${{ github.workspace }}
         docker-compose down
         docker-compose build --no-cache
         docker-compose up -d
