--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to EC2
+name: Deploy to Azure VM
 
 on:
   push:
@@ -8,41 +8,35 @@ on:
 
 jobs:
   deploy:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Docker
+    - name: Setup SSH
       run: |
-        sudo systemctl start docker
-        sudo systemctl enable docker
+        mkdir -p ~/.ssh
+        echo "${{ secrets.VM_SSH_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan -H ${{ secrets.VM_HOST }} >> ~/.ssh/known_hosts
         
-    - name: Create environment file
+    - name: Deploy to Azure VM
       run: |
-        cd ${{ github.workspace }}
-        cat > .env << EOF
-        DB_USER=${{ secrets.DB_USER }}
-        DB_PASSWORD=${{ secrets.DB_PASSWORD }}
-        DB_HOST=${{ secrets.DB_HOST }}
-        DB_PORT=${{ secrets.DB_PORT }}
-        DB_NAME=${{ secrets.DB_NAME }}
-        JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
+        ssh azureuser@${{ secrets.VM_HOST }} << 'EOF'
+          cd /home/azureuser/dermacare-engine
+          git pull origin main
+          
+          # Docker 서비스 재시작 (Zero-downtime)
+          docker-compose build --no-cache
+          docker-compose up -d --force-recreate
         EOF
-        
-    - name: Deploy with Docker Compose
-      run: |
-        cd ${{ github.workspace }}
-        docker-compose down
-        docker-compose build --no-cache
-        docker-compose up -d
         
     - name: Verify deployment
       run: |
-        sleep 10
-        curl -f http://localhost:9000/health/ || exit 1
+        sleep 2
+        curl -f http://${{ secrets.VM_HOST }}:9000/health/ || exit 1
         
     - name: Show logs
       run: |
-        docker-compose logs --tail=50
+        ssh azureuser@${{ secrets.VM_HOST }} "cd /home/azureuser/dermacare-engine && docker-compose logs --tail=50"
