Update sequences and deploy workflow
- Update sequences.py with latest changes
- Update deploy.yml workflow configuration

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,9 +27,8 @@ jobs:
           cd /home/azureuser/dermacare-engine
           git pull origin main
           
-          # Docker 서비스 재시작 (Zero-downtime)
-          docker-compose build --no-cache
-          docker-compose up -d --force-recreate
+          # Docker 서비스 재시작
+          docker-compose down && docker-compose build --no-cache && docker-compose up -d
         EOF
         
     - name: Verify deployment
