--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,12 @@ jobs:
           git pull origin main
           
           # Docker 서비스 재시작
-          docker-compose down && docker-compose build --no-cache && docker-compose up -d
+          # 1. 모든 컨테이너와 네트워크 정리
+          docker-compose down --remove-orphans
+
+          # 2. 새로 빌드하고 시작
+          docker-compose build --no-cache
+          docker-compose up -d
         EOF
         
     - name: Verify deployment
